# FEDERATED-UNCERTAINTY

./: .gitignore  README.md  check_nf.ipynb  compute_measures_1d.py  copy_script.sh  example_ensemble_usage.py  llmm_tables.ipynb  main_images_mis.py  main_images_ood.py  main_toy.py  main_unc_decomp.py  pyproject.toml  run_exps.sh  run_exps_new.sh  total_aggregation.py  try_llm.ipynb  uncertainty_script.sh
configs/: config_utils.py  interesting_compositions.py  uncertainty_measures_configs.py
federated_uncertainty/: randomness.py
federated_uncertainty_scripts/: compute_measures_ood.py  compute_metrics.py  main_federated_ensembles.py  run_choice_noisy_models.sh  run_cifar10.sh  run_cifar100.sh  run_compute_measures_ood.sh  run_compute_metrics.sh  run_main_federated_ensembles.sh  run_main_federated_ensembles_lr_grid.sh  run_main_federated_ensembles_spoiler_grid.sh  run_test_train_vgg.sh  run_test_train_with_selection_and_validation.sh  run_train_with_selection.sh  run_train_with_split.sh  test_train_vgg.py  test_train_with_selection.py  test_train_with_selection_and_validation.py  test_trainer.py  train_with_split.py  vgg_cpu_quant.py  vgg_gpu_quant.py
mdu/: __init__.py  randomness.py
notebooks/: ablation_analysis.ipynb  check_nf.ipynb  check_results.ipynb  cleaned_table_analysis.ipynb  helper_full.ipynb  llmm_tables.ipynb  pareto_front_mis_ood.ipynb  pareto_front_ood.ipynb  play_ot.ipynb  play_ot_entropic.ipynb  results_analysis.ipynb  robust_toy.ipynb  scores_analysis.ipynb  selective_prediction.ipynb  single_config_results.ipynb  table_analysis.ipynb  table_utils.py  try_llm.ipynb  (+1 more)
(+119 files in other folders)
