[project]
name = "multidimensional-uncertainty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "ipython>=9.3.0",
    "jupyterlab>=4.4.5",
    "lm-polygraph>=0.4.0",
    "matplotlib>=3.10.3",
    "pot>=0.9.5",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch==2.5",
    "tqdm>=4.67.1",
    "transformers==4.49",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
