[project]
name = "multidimensional-uncertainty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "ipython>=9.3.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pot>=0.9.5",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch==2.2.2 ; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "torch>=2.7.1 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
]
